add parser for schedule detail
